{
  "version": 4,
  "terraform_version": "1.2.3",
  "serial": 523,
  "lineage": "ca5d7f8b-85f8-c879-8830-fd5babaafcf6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:081984678084:loadbalancer/app/terraform-example-alb/d2f698912d21c28d",
            "arn_suffix": "app/terraform-example-alb/d2f698912d21c28d",
            "desync_mitigation_mode": "defensive",
            "dns_name": "terraform-example-alb-1695216286.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:081984678084:loadbalancer/app/terraform-example-alb/d2f698912d21c28d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "terraform-example-alb",
            "security_groups": [
              "sg-01cf77d97ed8adaf1"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-099764bf280573ab3"
              },
              {
                "subnet_id": "subnet-099fb0b1d4584b45b"
              }
            ],
            "subnets": [
              "subnet-099764bf280573ab3",
              "subnet-099fb0b1d4584b45b"
            ],
            "tags": {
              "Name": "scwlua-alb"
            },
            "tags_all": {
              "Name": "scwlua-alb"
            },
            "vpc_id": "vpc-09429c25bec3e7a91",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_alb_target_group.group",
            "aws_db_instance.rds",
            "aws_db_option_group.rds",
            "aws_db_parameter_group.rds",
            "aws_db_subnet_group.rds",
            "aws_instance.app_server",
            "aws_security_group.alb",
            "aws_security_group.rds",
            "aws_security_group.web_sg1",
            "aws_security_group.web_sg2",
            "aws_subnet.rds_subnet1",
            "aws_subnet.rds_subnet2",
            "aws_subnet.web_subnet1",
            "aws_subnet.web_subnet2",
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "listener_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:081984678084:listener/app/terraform-example-alb/d2f698912d21c28d/bb42f11e15b0a5ea",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:081984678084:targetgroup/terraform-example-alb-target/90a894502a168d95",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:081984678084:listener/app/terraform-example-alb/d2f698912d21c28d/bb42f11e15b0a5ea",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:081984678084:loadbalancer/app/terraform-example-alb/d2f698912d21c28d",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.alb",
            "aws_alb_target_group.group",
            "aws_db_instance.rds",
            "aws_db_option_group.rds",
            "aws_db_parameter_group.rds",
            "aws_db_subnet_group.rds",
            "aws_instance.app_server",
            "aws_security_group.alb",
            "aws_security_group.rds",
            "aws_security_group.web_sg1",
            "aws_security_group.web_sg2",
            "aws_subnet.rds_subnet1",
            "aws_subnet.rds_subnet2",
            "aws_subnet.web_subnet1",
            "aws_subnet.web_subnet2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:081984678084:targetgroup/terraform-example-alb-target/90a894502a168d95",
            "arn_suffix": "targetgroup/terraform-example-alb-target/90a894502a168d95",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:081984678084:targetgroup/terraform-example-alb-target/90a894502a168d95",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "terraform-example-alb-target",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09429c25bec3e7a91"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dc2d3e4c0f9ebd18",
            "arn": "arn:aws:ec2:us-east-1:081984678084:instance/i-0a82e9ac0e617c31a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a82e9ac0e617c31a",
            "instance_initiated_shutdown_behavior": "terminate",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-058b68ab74215d01b",
            "private_dns": "ip-10-0-3-170.ec2.internal",
            "private_ip": "10.0.3.170",
            "public_dns": "ec2-3-235-151-48.compute-1.amazonaws.com",
            "public_ip": "3.235.151.48",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05b6277d11cd40b2c",
                "volume_size": 15,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-099fb0b1d4584b45b",
            "tags": {
              "Name": "mynew-appserver"
            },
            "tags_all": {
              "Name": "mynew-appserver"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-015ecbc4581054822",
              "sg-0341b595c4e280539"
            ]
          },
          "dependencies": [
            "aws_db_instance.rds",
            "aws_db_option_group.rds",
            "aws_db_parameter_group.rds",
            "aws_db_subnet_group.rds",
            "aws_security_group.rds",
            "aws_security_group.web_sg1",
            "aws_security_group.web_sg2",
            "aws_subnet.rds_subnet1",
            "aws_subnet.rds_subnet2",
            "aws_subnet.web_subnet1",
            "aws_subnet.web_subnet2",
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:081984678084:internet-gateway/igw-08bbe1d25783e9f6a",
            "id": "igw-08bbe1d25783e9f6a",
            "owner_id": "081984678084",
            "tags": {
              "Name": "scwlua-demo-ig"
            },
            "tags_all": {
              "Name": "scwlua-demo-ig"
            },
            "vpc_id": "vpc-09429c25bec3e7a91"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-08bbe1d25783e9f6a",
            "id": "r-rtb-079334b86dbe731f21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-079334b86dbe731f2",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gateway",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:081984678084:security-group/sg-01cf77d97ed8adaf1",
            "description": "Terraform load balancer security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01cf77d97ed8adaf1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform_alb_security_group",
            "name_prefix": "",
            "owner_id": "081984678084",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "scwlua-alb-sg"
            },
            "tags_all": {
              "Name": "scwlua-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09429c25bec3e7a91"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:081984678084:security-group/sg-086faa3a5ca4685de",
            "description": "ssh allow to the mysql",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-086faa3a5ca4685de",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MYSQL",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-015ecbc4581054822",
                  "sg-0341b595c4e280539"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-015ecbc4581054822",
                  "sg-0341b595c4e280539"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "mysqlallow",
            "name_prefix": "",
            "owner_id": "081984678084",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "db-sg"
            },
            "tags_all": {
              "Name": "db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09429c25bec3e7a91"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web_sg1",
            "aws_security_group.web_sg2",
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:081984678084:security-group/sg-015ecbc4581054822",
            "description": "Terraform example security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-015ecbc4581054822",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "SG for Instance",
            "name_prefix": "",
            "owner_id": "081984678084",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "scwlua-web-sg1"
            },
            "tags_all": {
              "Name": "scwlua-web-sg1"
            },
            "timeouts": null,
            "vpc_id": "vpc-09429c25bec3e7a91"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:081984678084:security-group/sg-0341b595c4e280539",
            "description": "Terraform example security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0341b595c4e280539",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "SG2 for Instance",
            "name_prefix": "",
            "owner_id": "081984678084",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "scwlua-web-sg2"
            },
            "tags_all": {
              "Name": "scwlua-web-sg2"
            },
            "timeouts": null,
            "vpc_id": "vpc-09429c25bec3e7a91"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "rds_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:081984678084:subnet/subnet-0b2d64930278a3644",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b2d64930278a3644",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "081984678084",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "db-subnet1"
            },
            "tags_all": {
              "Name": "db-subnet1"
            },
            "vpc_id": "vpc-09429c25bec3e7a91"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "rds_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:081984678084:subnet/subnet-04ee643e79dc7d121",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04ee643e79dc7d121",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "081984678084",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "db-subnet2"
            },
            "tags_all": {
              "Name": "db-subnet2"
            },
            "vpc_id": "vpc-09429c25bec3e7a91"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:081984678084:subnet/subnet-099764bf280573ab3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-099764bf280573ab3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "081984678084",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "scwlua-pub-subnet1"
            },
            "tags_all": {
              "Name": "scwlua-pub-subnet1"
            },
            "vpc_id": "vpc-09429c25bec3e7a91"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:081984678084:subnet/subnet-099fb0b1d4584b45b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-099fb0b1d4584b45b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "081984678084",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "scwlua-pub-subnet2"
            },
            "tags_all": {
              "Name": "scwlua-pub-subnet2"
            },
            "vpc_id": "vpc-09429c25bec3e7a91"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:081984678084:vpc/vpc-09429c25bec3e7a91",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04923a44ecf32dc1b",
            "default_route_table_id": "rtb-079334b86dbe731f2",
            "default_security_group_id": "sg-0a8ed114243833dd0",
            "dhcp_options_id": "dopt-007cbf99e58dd23ea",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-09429c25bec3e7a91",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-079334b86dbe731f2",
            "owner_id": "081984678084",
            "tags": {
              "Name": "scwlua-demo-vpc"
            },
            "tags_all": {
              "Name": "scwlua-demo-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}